# HaskellBook

Chapter_06/: 6.12.hs  6.13-1.hs  6.13-2.hs  6.14.hs
Chapter_07/: 7.10.hs  7.11.hs  7.2.hs  7.3.hs  7.4.hs  7.5.hs  7.6.hs  7.7.hs  7.8.hs  7.9.hs
Chapter_08/: 8.2_Factorial!.hs  8.3_Bottom.hs  8.4_Fibonacci_numbers.hs  8.5_Integral_division.hs  8.6_Chapter_Exercises.hs
Chapter_09_Lists/: 9.10_Filtering_lists_of_values.hs  9.11_Zipping_lists.hs  9.12_Chapter_Exercises.hs  9.3_Pattern_matching.hs  9.4_Syntactic_sugar.hs  9.5_Ranges_to_construct_lists.hs  9.6_Extracting_portions_of_lists.hs  9.7_List_comprehensions.hs  9.9_Transforming_lists_of_values.hs
Chapter_10_Folding_lists/: 10.10_Chapter_Exercises.hs  10.4_Fold_right.hs  10.5_Fold_left.hs  10.6_How_to_write_fold_functions.hs  10.9_Scans.hs
Chapter_11_Algebraic_datatypes/: 11.10_Sum_types.hs  11.11_Product_types.hs  11.12_Normal_form.hs  11.13_Constructing_and_deconstructing_values.hs  11.14_Function_type_is_exponential.hs  11.17_Binary_Tree.hs  11.18_Chapter_Exercises.hs  11.4_Function_type_is_exponential.hs  11.5_Data_constructors_and_values.hs  11.6_What_is_a_type_and_what_is_data.hs  11.8_What_makes_datatypes_algebraic.hs  11.9_newtype.hs
Chapter_12_Signaling_adversity/: 12.2_How_I_learned_to_stop_worrying_and_love_Nothing.hs  12.3_Bleating_either.hs  12.5_Chapter_Exercises.hs
Chapter_13_Building_projects/: 13.14_Modifying_code_1_Ciphers.hs  13.14_Modifying_code_2_Palindrome.hs  13.14_Modifying_code_3_Palindrome-sentence.hs  13.14_Modifying_code_4_Person.hs
Chapter_13_Building_projects/hangman/: hangman.cabal
Chapter_13_Building_projects/hangman/data/: dict.txt
Chapter_13_Building_projects/hangman/src/: GameWords.hs  Main.hs  Puzzle.hs
Chapter_13_Building_projects/hangman/tests/: Tests.hs
Chapter_13_Building_projects/hello/: hello.cabal
Chapter_13_Building_projects/hello/exe/: Main.hs
Chapter_13_Building_projects/hello/src/: DogsRule.hs  Hello.hs
Chapter_14_Testing/addition/: Addition.hs  Division.hs  Multiplication.hs  addition.cabal
Chapter_14_Testing/exercises/: exercises.cabal
Chapter_14_Testing/exercises/src/: Ciphers.hs  Main.hs  WordNumber.hs
Chapter_14_Testing/exercises/tests/: Tests.hs
Chapter_14_Testing/morse/: morse.cabal
Chapter_14_Testing/morse/src/: Main.hs  Morse.hs
Chapter_14_Testing/morse/tests/: Tests.hs
Chapter_15_Monoid_and_Semigroup/: 15.10_Reusing_algebras.hs  15.11_Madness.hs  15.12_Better_living_through_QuickCheck.hs  15.13_Semigroup.hs  15.15_Chapter_exercises_Semigroup.hs
