name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Júlia Garrigós
maintainer:          example@example.com
copyright:           2018 Júlia Garrigós
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,random
                      ,split
                      , hspec
                      , QuickCheck

test-suite tests
 ghc-options:           -Wall -fno-warn-orphans
 type:                  exitcode-stdio-1.0
 main-is:               Tests.hs
 hs-source-dirs:        tests
 build-depends:         base
                      , containers
                      , hspec
                      , QuickCheck
                      , hangman
 default-language:      Haskell2010