name:                addition
version:             0.1.0.0
homepage:            https://github.com/githubuser/addition#readme
license:             BSD3
license-file:        LICENSE
author:              Júlia Garrigós
maintainer:          example@example.com
copyright:           2018 Júlia Garrigós
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                      , hspec
  hs-source-dirs:      .
  default-language:    Haskell2010
